--- a/Multiple-Linear-Regression.ipynb
+++ b/Multiple-Linear-Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "95769586",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H\n"
+      "Coefficients (beta): [10.43227666  0.12391931  7.03170029]\n",
+      "Predicted price for new house: 229.79827089337158\n",
+      "Mean Squared Error: 4.495677233429355\n",
+      "R-squared: 0.9982046017438381\n"
      ]
     }
    ],
    "source": [
-    "print(\"H\")"
+    "import numpy as np\n",
+    "\n",
+    "# Step 1: Prepare data\n",
+    "# X: features (add column of 1s for intercept)\n",
+    "X = np.array([\n",
+    "    [1, 1000, 2],\n",
+    "    [1, 1500, 3],\n",
+    "    [1, 2000, 3],\n",
+    "    [1, 1200, 2],\n",
+    "    [1, 1800, 4]\n",
+    "])\n",
+    "\n",
+    "y = np.array([150, 220, 280, 170, 260])\n",
+    "\n",
+    "# Step 2: Fit model using OLS formula\n",
+    "X_transpose = np.transpose(X)\n",
+    "beta = np.linalg.inv(X_transpose.dot(X)).dot(X_transpose).dot(y)\n",
+    "\n",
+    "print(\"Coefficients (beta):\", beta)\n",
+    "\n",
+    "# Step 3: Make a prediction for a new house: Size=1600 sq ft, Bedrooms=3\n",
+    "new_house = np.array([1, 1600, 3])\n",
+    "predicted_price = np.dot(new_house, beta)\n",
+    "print(\"Predicted price for new house:\", predicted_price)\n",
+    "\n",
+    "# Step 4: Evaluate\n",
+    "y_pred = X.dot(beta)\n",
+    "mse = np.mean((y - y_pred)**2)\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "\n",
+    "# R-squared\n",
+    "ss_tot = np.sum((y - np.mean(y))**2)\n",
+    "ss_res = np.sum((y - y_pred)**2)\n",
+    "r_squared = 1 - (ss_res / ss_tot)\n",
+    "print(\"R-squared:\", r_squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "520ee180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Step 1: Prepare data\n",
+    "data = {\n",
+    "    'Size': [1000, 1500, 2000, 1200, 1800],\n",
+    "    'Bedrooms': [2, 3, 3, 2, 4],\n",
+    "    'Price': [150, 220, 280, 170, 260]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Features (X) and target (y)\n",
+    "X = df[['Size', 'Bedrooms']]\n",
+    "y = df['Price']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520ee180",
+   "id": "0991411d",
    "metadata": {},
    "outputs": [],
    "source": []
