--- a/Logistic-Regression.ipynb
+++ b/Logistic-Regression.ipynb
@@ -7,34 +7,77 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '—' (U+2014) (2415278111.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    z = —1.5 + 0.6 * hours # Formula\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '—' (U+2014)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chance of passing: 0.82\n",
+      "Prediction: Pass\n"
      ]
     }
    ],
    "source": [
     "import math\n",
-    "# Sigmoid turns z into a chance (O to 1)\n",
-    "def sigmoid(z) :\n",
-    "return 1 / (1 +\n",
+    "\n",
+    "# Sigmoid turns z into a chance (0 to 1)\n",
+    "def sigmoid(z):\n",
+    "    return 1 / (1 + math.exp(-z))\n",
+    "\n",
     "hours = 5\n",
-    "z = —1.5 + 0.6 * hours # Formula\n",
-    "chance = sigmoid (z)\n",
-    "# Get chance\n",
-    "predi on\n",
-    "= \"Pass\" if chance > else \"Fail\" # Decide\n",
-    "of passing: {chance: .2f} (that's\n",
-    "pri nt ction: {prediction}\" )\n",
-    ".0096) \" )"
+    "z = -1.5 + 0.6 * hours  # Formula\n",
+    "chance = sigmoid(z)\n",
+    "\n",
+    "# Get prediction\n",
+    "prediction = \"Pass\" if chance > 0.5 else \"Fail\"  # Decide\n",
+    "\n",
+    "print(f\"Chance of passing: {chance:.2f}\")\n",
+    "print(f\"Prediction: {prediction}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6c27c742",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Accuracy: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#trying some real world data, wihtout having any file\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "# Sample data\n",
+    "data = {\n",
+    "    'Hours_Studied': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+    "    'Passed': [0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "X = df[['Hours_Studied']]\n",
+    "y = df['Passed']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Model Accuracy: {accuracy:.2f}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c27c742",
+   "id": "b0ae6024",
    "metadata": {},
    "outputs": [],
    "source": []
