--- a/Random-Forest.ipynb
+++ b/Random-Forest.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "042874d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n",
+      "usage: ipykernel_launcher.py [-h] --input INPUT [--output_dir OUTPUT_DIR]\n",
+      "                             [--date_col DATE_COL]\n",
+      "                             [--forecast_periods FORECAST_PERIODS]\n",
+      "                             [--n_clusters N_CLUSTERS]\n",
+      "                             [--churn_days_window CHURN_DAYS_WINDOW]\n",
+      "ipykernel_launcher.py: error: argument --forecast_periods: invalid int value: 'c:\\\\Users\\\\LENOVO\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-v3ae76b7bf43e05c7c090ffdfc64e5b1bf332a5d29.json'\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    }
+   ],
    "source": [
     "# sales_ml_pipeline_no_employee.py\n",
     "\n",
