--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -37,8 +37,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cd703dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [08:28:16] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"n_estimators\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.42857142857142855\n",
+      "Confusion Matrix:\n",
+      "[[ 6 14]\n",
+      " [10 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('data.csv')\n",
+    "data.head()\n",
+    "\n",
+    "# Encode categorical variables\n",
+    "label_encoder = LabelEncoder()\n",
+    "data['Department'] = label_encoder.fit_transform(data['Department'])\n",
+    "data['Attrition'] = label_encoder.fit_transform(data['Attrition'])\n",
+    "\n",
+    "# Split the data into features and target\n",
+    "X = data.drop('Attrition', axis=1)\n",
+    "y = data['Attrition']\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Create a DMatrix\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
+    "\n",
+    "# Set parameters\n",
+    "params = {\n",
+    "    'objective': 'binary:logistic',\n",
+    "    'max_depth': 3,\n",
+    "    'learning_rate': 0.1,\n",
+    "    'n_estimators': 100,\n",
+    "    'eval_metric': 'logloss'\n",
+    "}\n",
+    "\n",
+    "# Train the model\n",
+    "bst = xgb.train(params, dtrain, num_boost_round=100)\n",
+    "\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = bst.predict(dtest)\n",
+    "y_pred = [1 if y > 0.5 else 0 for y in y_pred]\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Confusion Matrix:\\n{conf_matrix}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "752cc3ae",
    "metadata": {},
    "outputs": [],
    "source": []
